220328 20:30:57 [ERROR] mysqld got exception 0xc0000005 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
Server version: 10.7.3-MariaDB-log
|
key_buffer_size=209715200
|
read_buffer_size=1048576
|
max_used_connections=0
|
max_threads=65537
|
thread_count=0
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 335757576 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
Thread pointer: 0x0
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
server.dll!translog_sync()[ma_loghandler.c:8947]
|
server.dll!maria_end()[ma_init.c:95]
|
server.dll!maria_panic()[ma_panic.c:136]
|
server.dll!ha_maria_init()[ha_maria.cc:3853]
|
server.dll!ha_initialize_handlerton()[handler.cc:649]
|
server.dll!plugin_initialize()[sql_plugin.cc:1462]
|
server.dll!plugin_init()[sql_plugin.cc:1755]
|
server.dll!init_server_components()[mysqld.cc:5083]
|
server.dll!mysqld_main()[mysqld.cc:5698]
|
mysqld.exe!__scrt_common_main_seh()[exe_common.inl:288]
|
KERNEL32.DLL!BaseThreadInitThunk()
|
ntdll.dll!RtlUserThreadStart()
|
The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mysqld/ contains
|
information that should help you find out what is causing the crash.
|